<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- <TextView
        android:id="@+id/textView1carttotal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listView1cartitem"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:gravity="left"
        android:text="@string/carttotal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000"
        android:typeface="serif"
        android:visibility="visible" /> -->        
        
    
    <EditText
        android:id="@+id/editTextdiscountcode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1carttotal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_small"
        android:ems="10"
        android:hint="@string/discountcode"
        android:paddingLeft="12dp"
        android:typeface="serif" >
    </EditText>
    
    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        
         <TextView android:id="@+id/lblSplPromoLabelCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/specialpromodisc"
            android:textColor="#000000"
            android:textSize="18sp"
            android:gravity="right|center_vertical"/>
         
         <TextView android:id="@+id/lblSplPromoLabelCartValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="0.000 KD"
            android:textSize="18sp"
            android:textColor="#000000"
            android:lines="1"
            android:gravity="right|center_vertical"
            style="@style/autoscrollText"/>
    </LinearLayout>
    
    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        
         <TextView android:id="@+id/lblcartSubtotalLabelCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="@string/cartsubtotal"
            android:textColor="#000000"
            android:gravity="right|center_vertical"/>
         
         <TextView android:id="@+id/lblcartSubtotalLabelCartValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="0.000 KD"
            android:textSize="18sp"
            android:textColor="#000000"
            android:gravity="right|center_vertical"/>
    </LinearLayout>
    
   

    <!-- <Spinner
        android:id="@+id/spinner1cart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextdiscountcode"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/spinner"
        android:dropDownVerticalOffset="5dp"
        android:paddingLeft="8dp"
        android:prompt="@string/country" /> -->
    
</LinearLayout>