<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rellaylin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@drawable/dairam_header2" >

        <Button
            android:id="@+id/buttonbackmyaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" 
            android:layout_gravity="left|center_vertical"                       
            android:background="@drawable/back_arrow" />

        <TextView
            android:id="@+id/textViewbackmyaccount"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80dp"
            android:textDirection="ltr"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/myaccountheader"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff" />
        
        <Button
            android:id="@+id/buttonbackmyaccountInvisble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_gravity="right|center_vertical"                       
            android:background="@drawable/back_arrow" />

    </LinearLayout>

    <!-- <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight=".1"
        android:background="@drawable/dairam_header2"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/buttonbackmyaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/back_arrow" />

        <TextView
            android:id="@+id/textViewbackmyaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/myaccountheader"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff" />
    </TableRow> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/myaccounteditinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/red_arrow" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/myaccoutnedit"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#46474A"
                android:visibility="visible" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/dividergray" />

        <RelativeLayout
            android:id="@+id/myaccountmyorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/buttonmo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/red_arrow" />

            <TextView
                android:id="@+id/textViewmo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/myaccoutnorders"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#46474A"
                android:visibility="visible" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/dividergray" />

        <RelativeLayout
            android:id="@+id/myaccountaddressbook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/buttonab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/red_arrow" />

            <TextView
                android:id="@+id/textViewab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/myaccountaddressbook"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#46474A"
                android:visibility="visible" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/dividergray" />
    </LinearLayout>

</LinearLayout>